--- a/web170/static-template-2.html
+++ b/web170/static-template-2.html
@@ -20,7 +20,7 @@
         </div>
         
         <div class="project_details_img">
-            <a class="no-block" href="http://academics.troyfleischauer.com/web170/HTML-CSS-Template/index.html" target="_blank" ><img src="web170/images/static-template-2-507x385.jpg" alt="image link to Static Template 2" /></a>
+            <a href="http://academics.troyfleischauer.com/web170/HTML-CSS-Template/index.html" target="_blank" ><img src="web170/images/static-template-2-965x774px.jpg" alt="image link to Static Template 2" /></a>
         </div> <!-- end project_details_img -->
     </div>
     
