--- a/hcde419/research-report.html
+++ b/hcde419/research-report.html
@@ -34,7 +34,7 @@
         </div>
         
         <div class="project_details_img">
-            <a href="http://academics.troyfleischauer.com/HCDE419/HCDE419-P3-Research-Report-Music-Collaboration.pdf" target="_blank"><img src="hcde419/images/research-report-965x931px.png" alt="image link to pdf of Random Trombone research report" /></a>
+            <a href="http://academics.troyfleischauer.com/HCDE419/HCDE419-P3-Research-Report-Music-Collaboration.pdf" target="_blank"><img src="hcde419/images/research-report-965x787px.jpg" alt="image link to pdf of Random Trombone research report" /></a>
         </div> <!-- end project_details_img -->
     </div>
     
