--- a/web120/overview.html
+++ b/web120/overview.html
@@ -29,7 +29,7 @@
         </div>
         
         <div class="project_details_img">
-            <a href="http://edison.seattlecentral.edu/~tfleis02/web120/final-project/" target="_blank"><img src="web120/images/protosite.png" alt="image link to protosite"/></a>
+            <a href="http://academics.troyfleischauer.com/web120/final-project/" target="_blank"><img src="web120/images/protosite.png" alt="image link to protosite"/></a>
         </div> <!-- end project_details_img -->
     </div>
     
