--- a/index.html
+++ b/index.html
@@ -418,7 +418,8 @@
               	  <li><a class="project_title_trombone" href="hcde419/overview.html">Overview</a></li>
                   <li><a class="project_title_trombone" href="hcde419/project-proposal.html">Project Proposal</a></li>
                   <li><a class="project_title_trombone" href="hcde419/research-report.html">Research Report</a></li>
-                  <li><a class="project_title_trombone" href="hcde419/prototype-presentation.html">1st Prototype Presentation</a></li>
+                  <li><a class="project_title_trombone" href="hcde419/personas-scenarios.html">Personas &amp; Scenarios</a></li>
+                  <li><a class="project_title_trombone" href="hcde419/prototype-presentation.html">Prototype Presentations</a></li>
                   <li><a class="project_title_trombone" href="hcde419/final-report.html">Final Report</a></li>
               </ul>
               <div class="clear"></div>
