--- a/web170/design-comps.html
+++ b/web170/design-comps.html
@@ -26,7 +26,7 @@
             <li>Responsive Design</li>
         </ul>
         
-        <p>Yet, I didn’t want to build the wrong system. I conducted the discovery exercises, and created the resulting assets in the first week of the quarter.</p>
+        <p>Yet, I didn’t want to build the wrong system. I conducted the discovery exercises,<!-- and created the resulting assets,--> including these quick and dirty design comps, in the first week of the quarter.</p>
 
 		<!--<p>Unfortunately, the first week of the quarter was also the Fourth of July weekend and my clients were vacationing.</p> -->
         
