--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           
           <h2>Process</h2>
           
-          <p>I enjoy the process of making information systems usable by researching user needs to make artifacts such as:</p>
+          <p>I enjoy making information systems usable by researching user needs to make artifacts such as:</p>
               <ul>
                   <li>Information Architecture Diagrams</li>
                   <li>Wire Frames</li>
@@ -643,5 +643,15 @@
                <div id="result"></div>
    <!--</div>-->
    </div> <!-- end page-contact -->
+   
+   <script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		
+		  ga('create', 'UA-59180919-1', 'auto');
+		  ga('send', 'pageview');
+    </script>
   </body>
 </html>
