--- a/web120/protosite.html
+++ b/web120/protosite.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -16,21 +16,21 @@
         <h2>Overview</h2>
         <p>The focus of this Web Authoring project was to design and create a site with valid HTML 5 and CSS 3 markup (W3C).</p>
 
-		<h2>Client / User Goals</h2>
-		<p>My client’s goals were to provide information about her:</p> 
-        	<ul>
+	  <h2>Client / User Goals</h2>
+	    <p>My client’s goals were to provide information about her:</p> 
+              <ul>
             	<li>Artwork</li>
                 <li>Upcoming Events</li> 
                 <li>Instruction</li> 
                 <li>Methods of Contact</li>
-            </ul>
+	      </ul>
 
-		<p>We were able to create a design and protosite that met both my client’s objectives and addressed user goals through:</p>
-        	<ul>
+	    <p>We were able to create a design and protosite that met both my client’s objectives and addressed user goals through:</p>
+              <ul>
             	<li>Discovery Phases</li> 
                 <li>Client Meetings</li> 
                 <li>Iteration</li> 
-            </ul>
+	      </ul>
         
         <!-- <p>I added in some jQuery for hover states as seen on <a href="http://edison.seattlecentral.edu/~tfleis02/web120/final-project/portfolio-garden.php">Portfolio > Garden</a>, as well as implemented Lightbox 2 through out the site.</p>
         
