--- a/web120/overview.html
+++ b/web120/overview.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <title>Web Design | Client: Nan Nalder | Troy Fleischauer</title>
 
 <meta name="keywords" content=" “user interface”, ui, “audience, issues, approach”, persona, “site map”, “information architecture diagram”, “user needs”, “940 grid”, “html 5”, “css 3”, templates, “php includes”, “design comps”, “lightbox 2”, “artist portfolio”, web120, “seattle central college”, illustrator, “web authoring” ">
