update web copy

--- a/web202/overview.html
+++ b/web202/overview.html
@@ -35,7 +35,7 @@
                 <li>Interaction Diagram</li>
                 <li>Wire Frames</li> 
                 <li>Visual Designs</li>
-                <li>Proto-site</li>
+                <li>Protosite</li>
              </ul>
         </div>
         
