add joemicheals.com project
also organized {less} files

--- a/info490/video-prototype.html
+++ b/info490/video-prototype.html
@@ -28,10 +28,10 @@
             	<img src="info490/images//MajorAdvice-965x1000px.jpg">
            </div>-->
                 
-                <div class="iframe-wrapper" id="maru">
-                    <iframe src="//www.youtube.com/embed/D_0EqGPc1Vk?feature=player_detailpage" frameborder="0" allowfullscreen>
-                    </iframe>
-                </div>
+          <div class="iframe-wrapper">
+          	<iframe src="//www.youtube.com/embed/D_0EqGPc1Vk?feature=player_detailpage" allowfullscreen></iframe>
+            <!--<iframe src="https://www.youtube.com/embed/D_0EqGPc1Vk" allowfullscreen></iframe>  -->
+          </div>
             
         </div> <!-- end project_details_img -->
     </div>
