update social media icon sizes

--- a/art483/design.html
+++ b/art483/design.html
@@ -35,7 +35,7 @@
         
         </div>
         
-        <div class="project_details_img mark-design">
+        <div class="project_details_img no-border">
             <a href="http://www.uwdesign2012.com/projects.php?w86" target="_blank" ><img src="art483/images/mark_interface-03.png" alt="image link to uwdesign 2012.com" /></a>
         </div> <!-- end project_details_img -->
     </div>
