--- a/thankyou.html
+++ b/thankyou.html
@@ -50,7 +50,7 @@
     	<div class="max1260px">
           <a href="http://portfolio.troyfleischauer.com/"><p>Troy Fleischauer</p></a>
             <div class="contact-icons max1260px">
-                <a href="https://github.com/tfleischauer" target="_blank" ><i class="fa fa-git-square fa-inverse icon-email"></i></a>
+                <a href="https://github.com/tfleischauer" target="_blank" ><i class="fa fa-git-square fa-inverse icon-github"></i></a>
                 <a href="https://www.linkedin.com/pub/troy-fleischauer/57/106/a23" target="_blank" ><i class="fa fa-linkedin-square fa-inverse icon-linkedin"></i></a>            
             </div>  
         </div> <!-- end max1260 -->
