update web copy
including Alana’s critique

--- a/info490/overview.html
+++ b/info490/overview.html
@@ -35,8 +35,10 @@
             </ul>    
         </div>
         
-         <div class="project_details_img">
-            <a href="http://academics.troyfleischauer.com/INFO490/Capstone_Poster-v1.1.pdf" target="_blank" ><img src="info490/images/Capstone_Poster-v1-965x1100px.jpg" alt="image link to Capstone poster" /></a>
+         <div class="project_details_img no-border">
+            <!--<a href="http://academics.troyfleischauer.com/INFO490/Capstone_Poster-v1.1.pdf" target="_blank" >-->
+            	<img src="info490/images/io-965x725.png" alt="Information Overload poster" title="Information Overload image" />
+            <!--</a>-->
         </div> <!-- end project_details_img -->
     </div>
     
