--- a/art483/process.html
+++ b/art483/process.html
@@ -16,7 +16,7 @@
         
         <p>The most frequent ideation techniques used were:</p>
         	<ul>
-        		<li>Mind Maping</li> 
+        		<li>Mind Mapping</li> 
             	<li>Card Sorting</li>
             </ul>
        
