--- a/web170/wire-frame.html
+++ b/web170/wire-frame.html
@@ -29,7 +29,7 @@
               
         </div>
         
-        <div class="project_details_img">
+        <div class="project_details_img no-border">
             <img src="web170/images/home-page-wire-frame-1-965x800px.png" alt="image link to Wire Frames" />
         </div> <!-- end project_details_img -->
     </div>
