--- a/hcde418/design-ideas-sketches.html
+++ b/hcde418/design-ideas-sketches.html
@@ -22,9 +22,12 @@
           <p class="pdf-link"><a href="http://academics.troyfleischauer.com/HCDE418/HCDE418-P4-Design-Ideas-and-Sketches.pdf" target="_blank" >See PDF of Design Ideas and Sketches</a></p>      
         </div>
         
-        <div class="project_details_img">
-            <a href="http://academics.troyfleischauer.com/HCDE418/HCDE418-P4-Design-Ideas-and-Sketches.pdf" target="_blank" ><img src="hcde418/images/HCDE418-P4-Design-Ideas-and-Sketches-1-965x1056px.jpg" alt="image link to PDF of Design Ideas and Sketches" /></a>
-        </div> <!-- end project_details_img -->
+        <figure>
+            <a href="http://academics.troyfleischauer.com/HCDE418/HCDE418-P4-Design-Ideas-and-Sketches.pdf" target="_blank" title="Links to PDF of Design Ideas and Sketches" >
+            	<img src="hcde418/images/HCDE418-P4-Design-Ideas-and-Sketches-1-965x1056px.jpg" alt="image link to PDF of Design Ideas and Sketches" />
+            </a>
+            <figcaption>Front Page of Design Ideas and Sketches Report</figcaption>
+        </figure>
     </div>
     
   </div> <!-- end content -->
