--- a/hcde418/overview.html
+++ b/hcde418/overview.html
@@ -32,11 +32,12 @@
             <p>Skills used: UX Research (Electronic Survey, Diary Study, Related Work Review;) Creating Personas; Sketching / Ideation; Documentation; Presentation.</p>       
         </div>
         
-        <div class="project_details_img">
+        <figure>
             <!--<a href="http://academics.troyfleischauer.com/HCDE418/CHI-2012-Student-Design-Competition-Paper.pdf" target="_blank" >-->
-            	<img src="hcde418/images/CHI-2012-Student-Design-Competition-Paper-965x868px.jpg" alt="CHI Submission image" title="CHI Submission image" />
+            	<img src="hcde418/images/CHI-2012-Student-Design-Competition-Paper-965x868px.jpg" alt="CHI Submission image" />
             <!--</a>-->
-        </div> <!-- end project_details_img -->
+            <figcaption>Front Page of Chi Submission</figcaption>
+        </figure>
     </div>
     
   </div> <!-- end content -->
