--- a/web202/overview.html
+++ b/web202/overview.html
@@ -41,11 +41,12 @@
              <p>Skills used: UX Discovery, Illustrator, Dreamweaver, HTML, CSS, basic PHP.</p>
         </div>
         
-        <div class="project_details_img">
+        <figure>
         	<!--<a href="http://academics.troyfleischauer.com/web202/tfleischauer-web202-a08-wireframes.pdf" target="_blank" >-->
-            <img src="web202/images/web202-a08-wireframes-1.jpg" alt="image of wire frames - set 1" title="Wire frame for Home page" />
+            	<img src="web202/images/web202-a08-wireframes-1.jpg" alt="image of wire frames - set 1" />
             <!--</a>-->
-        </div> <!-- end project_details_img -->
+            <figcaption>Home Page Wire Frame</figcaption>
+        </figure>
     </div>
     
   </div> <!-- end content -->
