--- a/hcde418/project-declaration.html
+++ b/hcde418/project-declaration.html
@@ -24,9 +24,12 @@
           <p class="pdf-link"><a href="http://academics.troyfleischauer.com/HCDE418/HCDE418-P1-Project-Declaration.pdf" target="_blank" >See PDF of Project Declaration</a></p>
         </div>
         
-        <div class="project_details_img mark-design">
-            <a href="http://academics.troyfleischauer.com/HCDE418/HCDE418-P1-Project-Declaration.pdf" target="_blank" ><img src="hcde418/images/HCDE418-P1-Project-Declaration.jpg" alt="image link to PDF of Project Declaration" /></a>
-        </div> <!-- end project_details_img -->
+        <figure>
+            <a href="http://academics.troyfleischauer.com/HCDE418/HCDE418-P1-Project-Declaration.pdf" target="_blank" title="Links to PDF of Project Declaration" >
+            	<img src="hcde418/images/HCDE418-P1-Project-Declaration.jpg" alt="image link to PDF of Project Declaration" />
+            </a>
+            <figcaption>Sample from the Project Declaration Document</figcaption>
+        </figure>
     </div>
     
   </div> <!-- end content -->
