--- a/info490/overview.html
+++ b/info490/overview.html
@@ -35,11 +35,12 @@
             </ul>    
         </div>
         
-         <div class="project_details_img no-border">
+         <figure>
             <!--<a href="http://academics.troyfleischauer.com/INFO490/Capstone_Poster-v1.1.pdf" target="_blank" >-->
-            	<img src="info490/images/io-965x725.png" alt="Information Overload poster" title="Information Overload image" />
+            	<img src="info490/images/io-965x725.png" alt="Information Overload poster" class="no-border" />
             <!--</a>-->
-        </div> <!-- end project_details_img -->
+            <figcaption>Main Page of Major Exploration</figcaption>
+        </figure>
     </div>
     
   </div> <!-- end content -->
