update web copy

--- a/hcde418/video-prototype.html
+++ b/hcde418/video-prototype.html
@@ -24,7 +24,7 @@
             <div class="iframe-wrapper no-border">                 
                 <iframe src="http://www.youtube.com/embed/z9t2d6H0F68" allowfullscreen></iframe>
             </div>
-            <figcaption>HomeConnect Video Prototype</figcaption>
+            <figcaption>Video Prototype - HomeConnect</figcaption>
                 
         </figure>
     </div> <!-- project_details_homeconnect -->
