--- a/web202/overview.html
+++ b/web202/overview.html
@@ -45,7 +45,7 @@
         	<!--<a href="http://academics.troyfleischauer.com/web202/tfleischauer-web202-a08-wireframes.pdf" target="_blank" >-->
             	<img src="web202/images/web202-a08-wireframes-1.jpg" alt="image of wire frames - set 1" />
             <!--</a>-->
-            <figcaption>Home Page Wire Frame</figcaption>
+            <figcaption>Home - Wire Frame</figcaption>
         </figure>
     </div>
     
