--- a/web120/overview.html
+++ b/web120/overview.html
@@ -39,7 +39,7 @@
               <!--<a href="http://academics.troyfleischauer.com/web120/final-project/" target="_blank">-->
                   <img src="web120/images/protosite.png" alt="A Portfolio Page" />
               <!--</a>-->
-          		  <figcaption>Protosite - A Portfolio Page</figcaption>
+          		  <figcaption>Portfolio > Garden > Sunflower Symphony</figcaption>
           </figure>
         
     </div> <!-- end project_details_nan --> 
