add beauty shot
images of designs in device vectors

--- a/web210/final-website.html
+++ b/web210/final-website.html
@@ -27,7 +27,7 @@
         
         <figure>
             <a href="http://academics.troyfleischauer.com/web210/earthshipseattle/" target="_blank" title="Links to Earthship Seattle Custom WordPress Theme" >
-            	<img src="web210/images/earthship-seattle-fp-965x489px.jpg" alt="image link to Custom Word Press Theme" />
+            	<img src="web210/images/beauty-home-550x292px.png" alt="image link to Custom Word Press Theme" />
             </a>
             <figcaption>Home - Earthship Seattle</figcaption>
         </figure>
