--- a/web210/overview.html
+++ b/web210/overview.html
@@ -38,9 +38,9 @@
         
         <figure>
             <!--<a href="http://academics.troyfleischauer.com/web210/earthshipseattle/" target="_blank" >-->
-            	<img src="web210/images/about-965x635px.jpg" alt="page.php - Custom Word Press Theme" />
+            	<img src="web210/images/beauty-about-550x292px.png" alt="page.php - Custom Word Press Theme" />
             <!--</a>-->
-            <figcaption>Page.php - Earthship Seattle</figcaption>
+            <figcaption>About - Earthship Seattle</figcaption>
         </figure>
     </div>
     
