add landing shot
Following Alana’s advice to show where I landed.

--- a/web202/overview.html
+++ b/web202/overview.html
@@ -43,9 +43,9 @@
         
         <figure>
         	<!--<a href="http://academics.troyfleischauer.com/web202/tfleischauer-web202-a08-wireframes.pdf" target="_blank" >-->
-            	<img src="web202/images/web202-a08-wireframes-1.jpg" alt="image of wire frames - set 1" />
+            	<img src="web202/images/product-listing-600x502px.png" alt="image of product listing page" />
             <!--</a>-->
-            <figcaption>Home - Wire Frame</figcaption>
+            <figcaption>Product Listing - reCreate Outside</figcaption>
         </figure>
     </div>
     
