update web copy

--- a/art483/presentation.html
+++ b/art483/presentation.html
@@ -29,7 +29,7 @@
         	<a href="http://academics.troyfleischauer.com/ART483/mark*_presentation.pdf" target="_blank" title="Links to PDF of Final Presentation Slides" >
             	<img src="art483/images/presentation-965x545px.jpg" alt="image link to pdf of final presentation slides" />
             </a>
-            <figcaption>Opening Final Presentation Slide</figcaption>
+            <figcaption>Opening Presentation Slide</figcaption>
         </figure>
         
     </div>
