update web copy

--- a/info490/overview.html
+++ b/info490/overview.html
@@ -14,7 +14,7 @@
   <div class="content">  
   
     <div class="project_details_major_exploration">
-    <h1>Major Exploration | Design Development Interaction Systems</h1>
+    <h1>Client: Undergraduate Academic Affairs | Design Development Interaction Systems</h1>
         	        
         <div class="project_details_p">
         <h2>Overview</h2>
