--- a/web210/overview.html
+++ b/web210/overview.html
@@ -14,7 +14,7 @@
   <div class="content">
   
     <div class="project_details_earthship_seattle">
-    	<h1>Earthship Seattle | WordPress, Web Design</h1>
+    	<h1>Client: Earthship Seattle | WordPress, Web Design</h1>
         
         <div class="project_details_p">
         	<h2>Overview</h2>  
