--- a/web120/overview.html
+++ b/web120/overview.html
@@ -15,7 +15,7 @@
   
     <div class="project_details_nan">
     
-    	<h1>Nan Nalder | Web Design, Web Authoring</h1>
+    	<h1>Client: Nan Nalder | Web Design, Web Authoring</h1>
         
         <div class="project_details_p">
         	<h2>Overview</h2>
