--- a/web170/overview.html
+++ b/web170/overview.html
@@ -14,7 +14,7 @@
   <div class="content">
   
     <div class="project_details_giddy_throng">
-    	<h1>Giddy Throng | WordPress, Web Design</h1>
+    	<h1>Client: Giddy Throng | WordPress, Web Design</h1>
         
         <div class="project_details_p">
         	<h2>Overview</h2>   
