--- a/web170/overview.html
+++ b/web170/overview.html
@@ -35,9 +35,9 @@
         
         <figure>
             <!--<a href="http://giddythrong.com/giddyup/" target="_blank" >-->
-            	<img src="web170/images/wp-965x824px.jpg" alt="Custom Word Press Theme" />
+            	<img src="web170/images/inventory-beauty-giddy-600x319px.png" alt="Custom Word Press Theme" />
             <!--</a>-->
-            <figcaption>Index.php - Giddy Throng</figcaption>
+            <figcaption>Inventory - Giddy Throng</figcaption>
         </figure>
     </div>
     
