--- a/web170/wp.html
+++ b/web170/wp.html
@@ -25,7 +25,7 @@
         
         <figure>
             <a href="http://giddythrong.com/giddyup/" target="_blank" title="Links to Custom Giddy Throng Theme" >
-            	<img src="web170/images/giddythrong-home-965x688px.jpg" alt="image link to Custom WordPress Theme" />
+            	<img src="web170/images/home-beauty-giddy-600x319px.png" alt="image link to Custom WordPress Theme" />
             </a>
             <figcaption>Front Page of Giddy Throng Theme</figcaption>
         </figure>
