--- a/joemicheals/overview.html
+++ b/joemicheals/overview.html
@@ -33,7 +33,7 @@
         
         <figure>
             <a href="http://joemicheals.com" target="_blank">
-            	<img  class="no-border" src="joemicheals/images/jm-home-965x651px.jpg" alt="image link to joemicheals.com" title="Links to JoeMicheals.com" />
+            	<img src="joemicheals/images/jm-600x415px.png" alt="image link to joemicheals.com" title="Links to JoeMicheals.com" />
             </a>
             <figcaption>Home - Joe Micheals</figcaption>
         </figure>
