update web copy

--- a/index.html
+++ b/index.html
@@ -309,9 +309,9 @@
           <div id="project_details_mark_list">
               <ul>
               	  <li><a class="project_title_mark first" href="art483/overview.html">Overview</a></li>
-                  <li><a class="project_title_mark" href="art483/presentation.html">Presentation</a></li>
                   <li><a class="project_title_mark" href="art483/process.html">Process + Ideation</a></li>
-                  <li><a class="project_title_mark" href="art483/design.html">Design</a></li>
+                  <li><a class="project_title_mark" href="art483/presentation.html">Presentation</a></li>
+                  <li><a class="project_title_mark" href="art483/design.html">Design + Video Prototype</a></li>
               </ul>
               <div class="clear"></div>
           </div><!-- project_details_mark_list -->
