update web copy

--- a/hcde418/final-report.html
+++ b/hcde418/final-report.html
@@ -10,7 +10,7 @@
   <div class="content">
   
     <div class="project_details_homeconnect">
-    	<h1>Final Report / Chi 2012</h1>
+    	<h1>Final Report / Chi Submission</h1>
         
         <figure>
             <a href="http://academics.troyfleischauer.com/HCDE418/HCDE418-P7b-HomeConnect-Final-Report.pdf" target="_blank" title="Links to PDF of Final Report">
