--- a/hcde419/overview.html
+++ b/hcde419/overview.html
@@ -15,7 +15,7 @@
   <div class="content">
   
     <div class="project_details_trombone">
-    	<h1>Random Trombone | Human-Computer Interaction Concepts</h1>
+    	<h1>Random Trombone | Human-Computer Interaction</h1>
         
         <figure>
         	<!--<a href="http://academics.troyfleischauer.com/HCDE419/HCDE419-P4-1st-Prototype-Presentation.pdf" target="_blank">-->
