update web copy

--- a/web120/overview.html
+++ b/web120/overview.html
@@ -28,7 +28,7 @@
         	<a href="http://academics.troyfleischauer.com/web120/final-project/" target="_blank" title="Links to Protosite" >
             	<img class="no-border" src="web120/images/tablet-double-home-about-01-805x300px.png" alt="Protosite Home" />
             </a>
-            <figcaption>Protosite Screenshots</figcaption>
+            <figcaption>Home, About - Nan Nalder</figcaption>
         </figure>
         
         <div class="project_details_p">
