--- a/web120/protosite.html
+++ b/web120/protosite.html
@@ -19,7 +19,7 @@
         	<a href="http://academics.troyfleischauer.com/web120/final-project/" target="_blank" title="Links to Protosite" >
             	<img class="no-border" src="web120/images/tablet-double-garden-01-806x300px.png" alt="Protosite Home" />
             </a>
-            <figcaption>Protosite Screenshots</figcaption>
+            <figcaption>Portfolio > Garden, Garden > Sunflower Symphony - Nan Nalder</figcaption>
         </figure>
         
         <h2>Protosite</h2>
