--- a/art483/process.html
+++ b/art483/process.html
@@ -12,11 +12,11 @@
     <div class="project_details_mark">
     	<h1>Process + Ideation</h1>
         
-        <figure>
-            <a href="http://academics.troyfleischauer.com/ART483/mark*_documentation.pdf" target="_blank" title="Links to PDF Documentation About Our Process" >
-            	<img src="art483/images/conceptual_model_presentation-1-620x150px.png" alt="image link to pdf of process documentation" />
+        <figure class="lb-hover">
+        	<a href="art483/images/conceptual_model_presentation-1-965x687px.png" alt="Conceptual Model - Final Version" data-lightbox="Conceptual Model - Final Version" data-title="Conceptual Model - Final Version">
+            	<img src="art483/images/conceptual_model_presentation-1-620x150px.png" alt="Segment of Final Conceptual Model" title="See Full Image" />
             </a>
-            <figcaption>A Section From Our Team's Master Mind Map</figcaption>
+            <figcaption>Conceptual Model - Section From Final Version</figcaption>
         </figure>
         
         <div class="project_details_p">
