--- a/web170/overview.html
+++ b/web170/overview.html
@@ -14,7 +14,7 @@
     	<h1>Client: Giddy Throng | WordPress, Web Design</h1>
         
         <figure>
-            <a href="http://giddythrong.com/giddyup/" target="_blank" title="Links to Custom Giddy Throng Theme" >
+            <a href="http://giddythrong.com" target="_blank" title="Links to Custom Giddy Throng Theme" >
             	<img src="web170/images/home-beauty-giddy-620x329px.png" alt="image link to Custom WordPress Theme" />
             </a>
             <figcaption>Front Page of Giddy Throng Theme</figcaption>
