--- a/web210/overview.html
+++ b/web210/overview.html
@@ -11,8 +11,8 @@
     	<h1>Client: Earthship Seattle | WordPress, Web Design</h1>
         
         <figure class="lb-hover">
-          <a href="web210/images/beauty-home-3333x1771.png" alt="Eartship Seattle Home - tablet, laptop, phone" data-lightbox="Eartship Seattle Home - tablet, laptop, phone" data-title="Eartship Seattle Home - tablet, laptop, phone">
-              <img src="web210/images/beauty-home-620x329px.png" alt="image link to Custom Word Press Theme" title="Enlarge Image" />
+          <a href="web210/images/beauty-home-3333x1771.png" alt="Earthship Seattle Home - tablet, laptop, phone" data-lightbox="Earthship Seattle Home - tablet, laptop, phone" data-title="Earthship Seattle Home - tablet, laptop, phone">
+              <img src="web210/images/beauty-home-620x329px.png" alt="image link to Custom WordPress Theme" title="Enlarge Image" />
           </a>
           <figcaption>Home - Earthship Seattle</figcaption>
         </figure>
